commit for further analysis on windows (no stream being established on mac, not on official build either)

--- a/webrtc/res/www/index.html
+++ b/webrtc/res/www/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>libdatachannel media example</title>
     <style>
+        body {
+            background-color:#224;
+            color:#aac;
+        }
+        
         button {
             padding: 8px 16px;
         }
